--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "pkgtest",
   "version": "1.0.0",
-  "main": "main.mjs",
+  "main": "main.js",
+  "type": "module",
   "scripts": {
-    "start": "node main.mjs",
-    "dev": "node main.mjs",
-    "build": "pkg main.mjs -t latest -o pkgtest",
-    "build14": "pkg main.mjs -t node14 -o pkgtest",
-    "build16": "pkg main.mjs -t node16 -o pkgtest"
+    "start": "node main.js",
+    "dev": "node main.js",
+    "build": "pkg main.js -t latest -o pkgtest",
+    "build14": "pkg main.js -t node14 -o pkgtest",
+    "build16": "pkg main.js -t node16 -o pkgtest"
   },
   "engines": {
     "node": ">= 14.17"
